2015-04-12  Carl Hetherington  <cth@carlh.net>

	* Hand-apply 83f1ea8eacb4d56860ccdb9db5acdf12c6e71dfb from master;
	ellipsize filters strings if it is long.

	* Hand-apply 24ae3a8f0a68529b50c34079e643caf6b9327523 from master;
	use the number of mapped audio channels for the DCP name, not the
	number of DCP channels (#479).

2015-03-25  Carl Hetherington  <cth@carlh.net>

	* Remove scaler settings and just uses SWS_BICUBIC all round.

	* Hand-apply ec3e6abf817b84d589f0782b01f5059dd3bf0953; only allow
	even DCP audio channel counts between 2 and 16 inclusive.

	* Hand-apply 3e3d3e46a74af7b3e6431033c7c80bd058c02cf6update;
	full/play length in the timing panel when the DCP frame rate is
	changed.

2015-03-24  Carl Hetherington  <cth@carlh.net>

	* Hand-apply 31eafa8a121b8d341d198e4fe426ee843cc70167; add a note
	to the timing panel to try to stop people changing the video frame
	rate in the wrong circumstances.

	* Hand-apply e30fd8d; resurrect JSON server code.

	* Hand-apply 7ba9dcdbfe8f0d94ad9887843995c152c45dfe9e from master;
	allow "deletion" of the audio part of a FFmpeg file from the
	timeline; delete unmaps the audio (#316).

2015-02-25  Carl Hetherington  <cth@carlh.net>

	* Version 2.0.41 released.

2015-02-10  c.hetherington  <cth@carlh.net>

	* Default to no colour conversion for
	JPEG2000 and DCP content (#445).

2015-02-06  Carl Hetherington  <cth@carlh.net>

	* Version 2.0.40 released.

2015-02-06  Carl Hetherington  <cth@carlh.net>

	* Version 2.0.39 released.

2015-01-31  Carl Hetherington  <cth@carlh.net>

	* Fix error when using audio delay.

2015-01-30  Carl Hetherington  <cth@carlh.net>

	* Fix update of preview when video fade changes.

	* Hopefully fix black borders round the preview in
	some cases.

2015-01-24  Carl Hetherington  <cth@carlh.net>

	* Version 2.0.38 released.

2015-01-23  Carl Hetherington  <cth@carlh.net>

	* Fix update checker.

	* Scan a whole FFmpeg file if no duration is given
	in its header.
